syntax = "proto3";

package order;

option go_package = "./internal/pb";

import "google/protobuf/timestamp.proto";

// Serviço de Pedidos
service OrderService {
  // ListOrders retorna uma lista de todos os pedidos
  rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
}

// Requisição vazia para listar pedidos
message ListOrdersRequest {}

// Resposta contendo uma lista de pedidos
message ListOrdersResponse {
  repeated Order orders = 1;
}

// Representa um pedido
message Order {
  int64 id = 1;
  string customer_name = 2;
  double total_amount = 3;
  string status = 4;
  google.protobuf.Timestamp created_at = 5;
}